# packaging_recalls

./: .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml  railway.json
.github/workflows/: ci.yml
1_data_pipeline/: pipeline.py
1_data_pipeline/fda_recall_data/: fda_packaging_recalls_processed.csv  recall_summary.json
2_data_analysis/: analysis.py  database.db  recall_columns_info.json  recall_columns_info_cleaned.json
3_data_dashboard/: README.md  app.py
backend/: pyproject.toml
backend/app/: config.py  database.py  main.py
backend/app/routes/: health.py  recalls.py
backend/scripts/: migrate_data.py
backend/tests/: conftest.py  test_health.py  test_recalls.py
frontend/: index.html  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: index.css
frontend/src/components/: ClassificationCharts.tsx  DataTable.tsx  DefectCharts.tsx  InsightsPanel.tsx  KPICard.tsx  TimelineCharts.tsx
frontend/src/components/ui/: card.tsx
frontend/src/lib/: utils.ts
frontend/src/pages/: Dashboard.tsx
