[project]
name = "packagingrecalls"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dash>=3.2.0",
    "matplotlib>=3.10.6",
    "mypy>=1.18.2",
    "pandas>=2.3.2",
    "pandas-stubs>=2.3.2.250827",
    "plotly>=6.3.0",
    "requests>=2.32.5",
    "seaborn>=0.13.2",
    "streamlit>=1.49.1",
    "types-requests>=2.32.4.20250913",
    "types-seaborn>=0.13.2.20250914",
    "wordcloud>=1.9.4",
]
