[project]
name = "packagingrecalls"
version = "0.1.0"
description = "FDA packaging recalls data pipeline and analysis powered by the openFDA API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.6",
    "pandas>=2.3.2",
    "requests>=2.32.5",
    "seaborn>=0.13.2",
    "wordcloud>=1.9.4",
]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pandas-stubs>=2.3.2.250827",
    "ruff>=0.11.0",
    "types-requests>=2.32.4.20250913",
    "types-seaborn>=0.13.2.20250914",
]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"*/analysis.py" = ["E501"]
"*/pipeline.py" = ["E501"]
